--- a/templates/index.html
+++ b/templates/index.html
@@ -222,7 +222,7 @@
                 formData.append('symbol', symbol);
                 formData.append('model_type', modelType);
 
-                const response = await fetch('http://127.0.0.1:5000/predict', {
+                const response = await fetch('/predict', {
                     method: 'POST',
                     body: formData
                 });
